[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/scripts/main_window.gd" type="Script" id=1]
[ext_resource path="res://fonts/Header_1.tres" type="DynamicFont" id=2]
[ext_resource path="res://Theme.tres" type="Theme" id=3]
[ext_resource path="res://sprites/icon.png" type="Texture" id=4]
[ext_resource path="res://fonts/Button_font.tres" type="DynamicFont" id=5]

[node name="Menu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 4 )
expand = true

[node name="Intro" type="Control" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 600.0

[node name="Menu" type="MarginContainer" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_right = 120
custom_constants/margin_top = 60
custom_constants/margin_left = 120
custom_constants/margin_bottom = 60

[node name="HBoxContainer" type="HBoxContainer" parent="Menu"]
margin_left = 120.0
margin_top = 60.0
margin_right = 904.0
margin_bottom = 540.0

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/HBoxContainer"]
margin_right = 784.0
margin_bottom = 480.0
size_flags_horizontal = 3
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameTitle" type="Label" parent="Menu/HBoxContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 784.0
margin_bottom = 198.0
custom_fonts/font = ExtResource( 2 )
text = "I Just want
to read my
Newspaper!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/HBoxContainer/VBoxContainer"]
margin_top = 218.0
margin_right = 784.0
margin_bottom = 432.0
custom_constants/separation = 20

[node name="Start" type="Button" parent="Menu/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 58.0
rect_min_size = Vector2( 300, 40 )
size_flags_horizontal = 0
theme = ExtResource( 3 )
text = "Start"
align = 0

[node name="Settings" type="Button" parent="Menu/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 300.0
margin_bottom = 136.0
rect_min_size = Vector2( 300, 40 )
size_flags_horizontal = 0
theme = ExtResource( 3 )
text = "Settings"
align = 0

[node name="Exit" type="Button" parent="Menu/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 156.0
margin_right = 300.0
margin_bottom = 214.0
rect_min_size = Vector2( 300, 40 )
size_flags_horizontal = 0
theme = ExtResource( 3 )
text = "Exit"
align = 0

[node name="Settings" type="MarginContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_right = 120
custom_constants/margin_top = 60
custom_constants/margin_left = 120
custom_constants/margin_bottom = 60

[node name="VBoxContainer" type="VBoxContainer" parent="Settings"]
margin_left = 120.0
margin_top = 60.0
margin_right = 904.0
margin_bottom = 540.0

[node name="HBoxContainer" type="HBoxContainer" parent="Settings/VBoxContainer"]
margin_right = 784.0
margin_bottom = 418.0
size_flags_vertical = 3
custom_constants/separation = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="Settings/VBoxContainer/HBoxContainer"]
margin_right = 382.0
margin_bottom = 418.0
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="Resolution" type="VBoxContainer" parent="Settings/VBoxContainer/HBoxContainer/VBoxContainer2"]
visible = false
margin_right = 382.0
margin_bottom = 104.0

[node name="Resolution-Title" type="Label" parent="Settings/VBoxContainer/HBoxContainer/VBoxContainer2/Resolution"]
margin_right = 382.0
margin_bottom = 29.0
text = "Window resolution"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resolution-Select" type="OptionButton" parent="Settings/VBoxContainer/HBoxContainer/VBoxContainer2/Resolution"]
margin_top = 33.0
margin_right = 382.0
margin_bottom = 104.0
text = "Resolution"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DevMode-Box" type="CheckBox" parent="Settings/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 382.0
margin_bottom = 58.0
rect_min_size = Vector2( 300, 0 )
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 5 )
text = "Developer Mode"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/VBoxContainer/HBoxContainer"]
margin_left = 402.0
margin_right = 784.0
margin_bottom = 418.0
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="MusicControl" type="VBoxContainer" parent="Settings/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 382.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3

[node name="MusicVolume-Title" type="Label" parent="Settings/VBoxContainer/HBoxContainer/VBoxContainer/MusicControl"]
margin_right = 382.0
margin_bottom = 18.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 5 )
text = "Music Volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVolume-Slider" type="HSlider" parent="Settings/VBoxContainer/HBoxContainer/VBoxContainer/MusicControl"]
margin_top = 22.0
margin_right = 382.0
margin_bottom = 38.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundsControl" type="VBoxContainer" parent="Settings/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 382.0
margin_bottom = 110.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3

[node name="SoundsVolume-Title" type="Label" parent="Settings/VBoxContainer/HBoxContainer/VBoxContainer/SoundsControl"]
margin_right = 382.0
margin_bottom = 18.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 5 )
text = "Sounds Volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundsVolume-Slider" type="HSlider" parent="Settings/VBoxContainer/HBoxContainer/VBoxContainer/SoundsControl"]
margin_top = 22.0
margin_right = 382.0
margin_bottom = 38.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitFromSettings" type="Button" parent="Settings/VBoxContainer"]
margin_top = 422.0
margin_right = 784.0
margin_bottom = 480.0
theme = ExtResource( 3 )
text = "Back To Menu"

[node name="ColorOverlay" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.2, 0.2, 0.2, 1 )

[connection signal="pressed" from="Menu/HBoxContainer/VBoxContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Menu/HBoxContainer/VBoxContainer/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Menu/HBoxContainer/VBoxContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="toggled" from="Settings/VBoxContainer/HBoxContainer/VBoxContainer2/DevMode-Box" to="." method="_on_DevModeBox_toggled"]
[connection signal="value_changed" from="Settings/VBoxContainer/HBoxContainer/VBoxContainer/MusicControl/MusicVolume-Slider" to="." method="_on_MusicVolumeSlider_value_changed"]
[connection signal="pressed" from="Settings/VBoxContainer/ExitFromSettings" to="." method="_on_ExitFromSettings_pressed"]
