[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/scripts/main_window.gd" type="Script" id=1]
[ext_resource path="res://sprites/icon.png" type="Texture" id=2]

[node name="MainWindow" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundImg" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 2 )

[node name="Menu" type="MarginContainer" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( -338.216, 104.677 )
custom_constants/margin_right = 120
custom_constants/margin_top = 60
custom_constants/margin_left = 120
custom_constants/margin_bottom = 60

[node name="HBoxContainer" type="HBoxContainer" parent="Menu"]
margin_left = 120.0
margin_top = 60.0
margin_right = 904.0
margin_bottom = 540.0

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/HBoxContainer"]
margin_right = 784.0
margin_bottom = 480.0
size_flags_horizontal = 3

[node name="Title" type="Label" parent="Menu/HBoxContainer/VBoxContainer"]
margin_right = 784.0
margin_bottom = 14.0
text = "Hello World"

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 200.0
margin_bottom = 480.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 200.0
margin_bottom = 462.0
size_flags_horizontal = 3
custom_constants/separation = 10
alignment = 1

[node name="Start" type="Button" parent="Menu/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 191.0
margin_right = 200.0
margin_bottom = 211.0
rect_pivot_offset = Vector2( -327.046, 67.7588 )
text = "Start"

[node name="Options" type="Button" parent="Menu/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 221.0
margin_right = 200.0
margin_bottom = 241.0
rect_pivot_offset = Vector2( -327.046, 67.7588 )
text = "Options"

[node name="Exit" type="Button" parent="Menu/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 251.0
margin_right = 200.0
margin_bottom = 271.0
rect_pivot_offset = Vector2( -327.046, 67.7588 )
text = "Exit"

[node name="Settings" type="MarginContainer" parent="."]
show_behind_parent = true
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_right = 120
custom_constants/margin_top = 60
custom_constants/margin_left = 120
custom_constants/margin_bottom = 60

[node name="VBoxContainer3" type="VBoxContainer" parent="Settings"]
margin_left = 120.0
margin_top = 60.0
margin_right = 904.0
margin_bottom = 540.0

[node name="HBoxContainer" type="HBoxContainer" parent="Settings/VBoxContainer3"]
margin_right = 784.0
margin_bottom = 456.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/VBoxContainer3/HBoxContainer"]
margin_right = 390.0
margin_bottom = 456.0
rect_pivot_offset = Vector2( -124.735, 322.432 )
size_flags_horizontal = 3

[node name="DevModeTitle" type="Label" parent="Settings/VBoxContainer3/HBoxContainer/VBoxContainer"]
margin_right = 390.0
margin_bottom = 14.0
text = "Settings window"

[node name="DevModeOption" type="CheckBox" parent="Settings/VBoxContainer3/HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 390.0
margin_bottom = 42.0
text = "Dev mode"

[node name="VBoxContainer2" type="VBoxContainer" parent="Settings/VBoxContainer3/HBoxContainer"]
margin_left = 394.0
margin_right = 784.0
margin_bottom = 456.0
rect_pivot_offset = Vector2( -124.735, 322.432 )
size_flags_horizontal = 3

[node name="MusicTitle" type="Label" parent="Settings/VBoxContainer3/HBoxContainer/VBoxContainer2"]
margin_right = 390.0
margin_bottom = 14.0
text = "Music volume"

[node name="MusicScrollBar" type="HSlider" parent="Settings/VBoxContainer3/HBoxContainer/VBoxContainer2"]
margin_top = 18.0
margin_right = 390.0
margin_bottom = 34.0
value = 75.0

[node name="SettingExitBtn" type="Button" parent="Settings/VBoxContainer3"]
margin_top = 460.0
margin_right = 784.0
margin_bottom = 480.0
text = "Back to Menu"

[connection signal="ready" from="." to="." method="_on_MainWindow_ready"]
[connection signal="pressed" from="Menu/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Menu/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Menu/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="value_changed" from="Settings/VBoxContainer3/HBoxContainer/VBoxContainer2/MusicScrollBar" to="." method="_on_MusicScrollBar_value_changed"]
[connection signal="pressed" from="Settings/VBoxContainer3/SettingExitBtn" to="." method="_on_SettingExitBtn_pressed"]
